# snag

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  LICENSE  README.md
.github/workflows/: ci.yml  prepare-release.yml  release.yml
docs/superpowers/plans/: 2026-04-10-facebook-marketplace-provider.md  2026-04-10-in-process-scheduler.md  2026-04-10-log-tab.md  2026-04-10-settings-and-autoupdate.md  2026-04-10-snag-implementation.md
docs/superpowers/specs/: 2026-04-10-facebook-marketplace-provider-design.md  2026-04-10-in-process-scheduler-design.md  2026-04-10-log-tab-design.md  2026-04-10-settings-and-autoupdate-design.md  2026-04-10-snag-design.md
scripts/: install.sh  uninstall.sh
src/: config.rs  credentials.rs  lib.rs  main.rs  scheduler.rs  types.rs  uninstall.rs  update.rs
src/daemon/: mod.rs  results.rs
src/marketplace/: mod.rs  rate_limit.rs
src/marketplace/providers/: ebay.rs  facebook.rs  mod.rs
src/notifier/: mod.rs
src/notifier/providers/: terminal.rs
src/tui/: app.rs  mod.rs  theme.rs  utils.rs
src/tui/dialogs/: alert_form.rs  confirm.rs  ebay_setup.rs  listing_detail.rs  mod.rs
src/tui/tabs/: alerts.rs  logs.rs  mod.rs  results.rs  settings.rs
tests/: config_test.rs  daemon_test.rs  results_test.rs  types_test.rs
