[package]
name = "snag"
version = "0.1.0"
edition = "2024"
description = "CLI tool for marketplace listing alerts"
license = "MIT"
repository = "https://github.com/weedgrease/snag"
readme = "README.md"
keywords = ["marketplace", "alerts", "tui", "facebook", "ebay"]
categories = ["command-line-utilities"]

[dependencies]
log = "0.4"
tui-logger = "0.18"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
directories = "6"
fs2 = "0.4"
ratatui = { version = "0.30", features = ["crossterm"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
semver = "1"
open = "5"
keyring = "3.6.3"
base64 = "0.22.1"

[dev-dependencies]
tempfile = "3"
